# forgesight

./: .env.example  .gitignore  CLAUDE.md  KAGGLE_UPLOAD.md  LICENSE  README.md  SESSIONS.md  plan.md  pyproject.toml  requirements-dev.txt  requirements-kaggle.txt
configs/: data.yaml  sft.yaml
notebooks/: forgesight_kaggle.ipynb
scripts/: make_manifest.py  smoke_collator.py  viz_sample.py
src/forgesight/: __init__.py  collator.py  coords.py  infer.py  model.py  schema.py  train_orpo.py  train_sft.py
src/forgesight/data/: build_dataset.py  conversation.py  ingest.py
src/forgesight/eval/: forgebench.py  metrics.py  report.py
src/forgesight/forgery/: base.py  copy_move.py  digit_swap.py  pipeline.py  recompress_ghost.py  splice.py
src/forgesight/serve/: profile.py
tests/: test_build_dataset.py  test_conversation.py  test_coords.py  test_forgery.py  test_ingest.py  test_metrics.py  test_model.py  test_schema.py
